# serviceregistrator

./: .coveragerc  .flake8  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.md  pyproject.toml  run_tests.sh  services.md  setup.py  tag_version.sh  tox.ini
.github/workflows/: dokcerci.yml  python-package.yml
requirements/: base.txt
serviceregistrator/: __init__.py  containerinfo.py  main.py  registrator.py  service.py  servicecheck.py
testing/: README.md
testing/dummyservice/: Dockerfile  Dockerfile.expose  Dockerfile.unhealthy  index.html  make_healthy.sh  make_unhealthy.sh  nginx.conf  query_checks.sh  run.sh  run_dev_consul.sh  run_host.sh  run_unhealthy.sh
tests/: checks_test.py  containerinfo_test.py  containermetadata_test.py  extract_ports_test.py  parse_container_attrs_test.py  registrator_test.py
